--- a/package.json
+++ b/package.json
@@ -26,6 +26,8 @@
     "@ionic/angular": "^4.7.1",
     "cordova-ios": "5.0.1",
     "core-js": "^2.5.4",
+    "firebase": "^7.6.2",
+    "firebaseui": "^4.4.0",
     "rxjs": "~6.5.1",
     "tslib": "^1.9.0",
     "zone.js": "~0.9.1"
