--- a/ngsw-config.json
+++ b/ngsw-config.json
@@ -1,6 +1,10 @@
 {
   "$schema": "./node_modules/@angular/service-worker/config/schema.json",
   "index": "/index.html",
+  "appData": {
+    "version": "1.1.5",
+    "changelog": "Added alert to check updates"
+  },
   "assetGroups": [
     {
       "name": "app",
@@ -13,7 +17,8 @@
           "/*.js"
         ]
       }
-    }, {
+    },
+    {
       "name": "assets",
       "installMode": "lazy",
       "updateMode": "prefetch",
