--- a/ngsw-config.json
+++ b/ngsw-config.json
@@ -2,8 +2,8 @@
   "$schema": "./node_modules/@angular/service-worker/config/schema.json",
   "index": "/index.html",
   "appData": {
-    "version": "1.1.5",
-    "changelog": "Added alert to check updates"
+    "version": "1.1.6",
+    "changelog": "fix completion and add form validation"
   },
   "assetGroups": [
     {
