--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "dayjs": "^1.8.19",
     "firebase": "^7.6.2",
     "firebaseui": "^4.4.0",
+    "hammerjs": "^2.0.8",
     "rxjs": "~6.5.1",
     "tslib": "^1.9.0",
     "zone.js": "~0.9.1"
